# torchlite-app

./: .gitignore  LICENSE  README.md  README.org  dashboard_mockup.html  next.config.js  package-lock.json  package.json
.github/workflows/: codeql-analysis.yml  node.js.yml
__tests__/: index.test.tsx
api/: pyproject.toml
api/src/api/: dashboard.py  extracted_features.py  main.py  torchlite.py  widgets.py
api/src/extracted_features/: page.py  volume.py  workset.py
api/test/: restclient_test.txt  test_dashboard.py  test_torchlite.py  test_volume.py  test_widgets.py  test_workset.py
api/tests/: test_dashboard.py  test_torchlite.py  test_volume.py  test_widgets.py  test_workset.py
app/: layout.tsx  page.tsx  styles.module.scss
app/dashboard/: layout.tsx  page.tsx  styles.module.css  styles.module.scss
app/dashboard/widgets/: page.tsx
backend/: README.org  pyproject.toml
backend/test/: test_dashboard.py  test_torchlite.py  test_widgets.py
components/: Layout.js  layout.module.css  layout.tsx  nav.module.scss  navbar.tsx  pane.module.scss  pane.tsx  widget.module.scss  widget.tsx
frontend/: package-lock.json  package.json
frontend/pages/: index.js
pages/: index.tsx
pages/dashboard/: index.tsx
pages/notebooks/: index.tsx
pages/widgets/: index.tsx
pages/worksets/: index.tsx
styles/: Home.module.css  globals.css
