                [tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
]

[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["cwulfman <cwulfman@princeton.edu>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.283"
uvicorn = "^0.20.0"
pytest = "^7.2.0"
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
